# zephyr_quad_rotor

./: .clang-format  .gitignore  CMakeLists.txt  README.md  prj.conf
boards/: adafruit_feather_nrf52840.overlay
src/: altitude.hpp  dps310.cpp  dps310.hpp  fusion.cpp  fusion.hpp  fxas21002.cpp  fxas21002.hpp  fxos8700.cpp  fxos8700.hpp  main.c  main.cpp  marg_sensor.cpp  marg_sensor.hpp  orientation.cpp  orientation.hpp  orientation_defs.hpp  pressure_sensor.cpp  pressure_sensor.hpp  synced_var.h  synced_var.hpp
